--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -12,7 +12,7 @@
     "index.js"
   ],
   "dependencies": {
-    "eslint-config-standard": "^14.1.0",
+    "eslint-config-airbnb-standard": "^3.1.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-node": "^11.0.0",
